# Polymarket-Rust-Copy-Trading-Bot

./: .env  Cargo.toml  README.md  all_wallets.txt  api_keys.json  credentials.json  wallets_with_frequency.txt
src/: main.rs  util.rs
src/real_time_data_client/: client.rs  mod.rs  model.rs
