[package]
name = "v0"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
polymarket-client-sdk = "0.1.1"
alloy = "1.1.3"
dotenv = "0.15"
uuid = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal_macros = "1.39.0"
rust_decimal = "1.39.0"
